--- a/package.json
+++ b/package.json
@@ -17,5 +17,14 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/dlmanning/gulp-sass/issues"
+  },
+  "dependencies": {
+    "node-sass": "~0.6.4",
+    "event-stream": "~3.0.16",
+    "clone": "~0.1.10",
+    "gulp-util": "0.0.1"
+  },
+  "devDependencies": {
+    "gulp": "~0.2.0"
   }
 }
