--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Gulp plugin for sass",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -22,9 +22,11 @@
     "node-sass": "~0.6.4",
     "event-stream": "~3.0.16",
     "clone": "~0.1.10",
-    "gulp-util": "0.0.1"
+    "gulp-util": "~2.1.3"
   },
   "devDependencies": {
-    "gulp": "~0.2.0"
+    "gulp": "~3.1.4",
+    "mocha": "~1.15.1",
+    "should": "~2.1.1"
   }
 }
