--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "url": "https://github.com/dlmanning/gulp-sass/issues"
   },
   "dependencies": {
-    "node-sass": "~0.6.4",
     "event-stream": "~3.0.16",
     "clone": "~0.1.10",
-    "gulp-util": "0.0.1"
+    "node-sass": "~0.7.0",
+    "gulp-util": "~2.1.3"
+
   },
   "devDependencies": {
-    "gulp": "~0.2.0"
+    "gulp": "~3.1.4"
   }
 }
