--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-sass",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "description": "Gulp plugin for sass",
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,7 @@
     "url": "https://github.com/dlmanning/gulp-sass/issues"
   },
   "dependencies": {
-    "node-sass": "~0.8",
+    "node-sass": "^0.9",
     "gulp-util": "~2.2",
     "map-stream": "~0.1"
   },
