--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "node-sass": "~0.8",
     "gulp-util": "~2.2",
-    "map-stream": "~0.1"
+    "map-stream": "~0.1",
+    "vinyl-sourcemaps-apply": "~0.1.1"
   },
   "devDependencies": {
     "tape": "~2.3",
