--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "url": "https://github.com/dlmanning/gulp-sass/issues"
   },
   "dependencies": {
-    "node-sass": "^1.0",
-    "gulp-util": "^3.0",
-    "map-stream": "~0.1",
-    "vinyl-sourcemaps-apply": "~0.1.1"
+    "gulp-util": "^3.0.1",
+    "map-stream": "^0.1.0",
+    "node-sass": "^1.1.4",
+    "vinyl-sourcemaps-apply": "^0.1.4"
   },
   "devDependencies": {
-    "tape": "~2.3",
-    "concat-stream": "~1.4"
+    "concat-stream": "^1.4.6",
+    "tape": "^3.0.2"
   },
   "jshintConfig": {
     "laxcomma": true
