--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gulp-sass",
-  "version": "1.3.3",
+  "version": "2.0.0",
   "description": "Gulp plugin for sass",
   "main": "index.js",
   "scripts": {
-    "test": "node test/test.js"
+    "test": "./node_modules/.bin/jshint index.js && ./node_modules/.bin/mocha test"
   },
   "repository": {
     "type": "git",
@@ -21,17 +21,16 @@
     "url": "https://github.com/dlmanning/gulp-sass/issues"
   },
   "dependencies": {
-    "clone": "~0.1.18",
     "gulp-util": "^3.0",
-    "map-stream": "~0.1",
-    "node-sass": "^2.0.1",
+    "node-sass": "^3.0.0-alpha.0",
+    "object-assign": "^2.0.0",
+    "through2": "^0.6.3",
     "vinyl-sourcemaps-apply": "~0.1.1"
   },
   "devDependencies": {
-    "tape": "~2.3",
-    "concat-stream": "~1.4"
-  },
-  "jshintConfig": {
-    "laxcomma": true
+    "gulp-sourcemaps": "^1.5.1",
+    "jshint": "^2.6.3",
+    "mocha": "^2.2.1",
+    "should": "^5.2.0"
   }
 }
