--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Gulp plugin for sass",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/jshint index.js && ./node_modules/.bin/mocha test"
+    "test": "./node_modules/.bin/mocha test"
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,6 @@
   },
   "devDependencies": {
     "eslint": "^0.17.1",
-    "jshint": "^2.6.3",
     "mocha": "^2.2.1",
     "should": "^5.2.0"
   }
