--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     "vinyl-sourcemaps-apply": "~0.1.1"
   },
   "devDependencies": {
+    "autoprefixer-core": "^5.1.11",
     "eslint": "^0.17.1",
+    "gulp": "^3.8.11",
+    "gulp-postcss": "^5.1.6",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-tap": "^0.1.3",
     "mocha": "^2.2.1",
     "should": "^5.2.0"
   }
