--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-sass",
-  "version": "2.0.4",
+  "version": "2.1.0-beta",
   "description": "Gulp plugin for sass",
   "main": "index.js",
   "scripts": {
