--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-tap": "^0.1.3",
     "mocha": "^2.2.1",
+    "rimraf": "^2.4.3",
     "should": "^5.2.0"
   }
 }
