--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   "dependencies": {
     "gulp-util": "^3.0",
     "node-sass": "^3.4.0",
-    "object-assign": "^2.0.0",
-    "through2": "^0.6.3",
-    "vinyl-sourcemaps-apply": "~0.1.1"
+    "object-assign": "^4.0.1",
+    "through2": "^2.0.0",
+    "vinyl-sourcemaps-apply": "^0.2.0"
   },
   "devDependencies": {
     "autoprefixer-core": "^5.0.0",
