--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "dependencies": {
     "gulp-util": "^3.0",
+    "lodash.clonedeep": "^4.3.2",
     "node-sass": "^3.4.2",
-    "object-assign": "^4.0.1",
     "through2": "^2.0.0",
     "vinyl-sourcemaps-apply": "^0.2.0"
   },
