Removed vinyl-sourcemaps-apply

--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "gulp-util": "^3.0",
     "lodash.clonedeep": "^4.3.2",
     "node-sass": "^4.2.0",
-    "through2": "^2.0.0",
-    "vinyl-sourcemaps-apply": "^0.2.0"
+    "through2": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
