--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-sass",
-  "version": "3.1.0",
+  "version": "4.0.0",
   "description": "Gulp plugin for sass",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,9 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/dlmanning/gulp-sass/issues"
+  },
+  "engines": {
+    "node": ">=4.0.0"
   },
   "dependencies": {
     "gulp-util": "^3.0",
