--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "url": "https://github.com/dlmanning/gulp-sass/issues"
   },
   "dependencies": {
-    "gulp-util": "^3.0",
+    "chalk": "^2.3.0",
     "lodash.clonedeep": "^4.3.2",
     "node-sass": "^4.8.3",
+    "plugin-error": "^1.0.1",
+    "replace-ext": "^1.0.0",
+    "strip-ansi": "^4.0.0",
     "through2": "^2.0.0",
     "vinyl-sourcemaps-apply": "^0.2.0"
   },
@@ -40,6 +43,7 @@
     "gulp-tap": "^0.1.3",
     "mocha": "^2.2.1",
     "rimraf": "^2.4.3",
-    "should": "^8.3.1"
+    "should": "^8.3.1",
+    "vinyl": "^2.1.0"
   }
 }
