--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,11 +11,11 @@ platform:
 
 environment:
   matrix:
-    # - nodejs_version: 0.10
-    # - nodejs_version: 0.12
-    # - nodejs_version: 4
-    # - nodejs_version: 6
-    # - nodejs_version: 8
+    - nodejs_version: 0.10
+    - nodejs_version: 0.12
+    - nodejs_version: 4
+    - nodejs_version: 6
+    - nodejs_version: 8
     - nodejs_version: 9
 
 install:
