--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,12 +11,9 @@ platform:
 
 environment:
   matrix:
-    - nodejs_version: 0.10
-    - nodejs_version: 0.12
-    - nodejs_version: 4
-    - nodejs_version: 6
-    - nodejs_version: 8
-    - nodejs_version: 9
+    - nodejs_version: lts/boron
+    - nodejs_version: lts/carbon
+    - nodejs_version: current
 
 install:
   - ps: Install-Product node $env:nodejs_version $env:platform
