--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "url": "https://github.com/dlmanning/gulp-sass/issues"
   },
   "dependencies": {
-    "gulp-util": "^3.0",
+    "ansi-colors": "^1.1.0",
     "lodash.clonedeep": "^4.3.2",
     "node-sass": "^4.8.3",
+    "plugin-error": "^1.0.1",
+    "replace-ext": "^1.0.0",
+    "strip-color": "^0.1.0",
     "through2": "^2.0.0",
+    "vinyl": "^2.1.0",
     "vinyl-sourcemaps-apply": "^0.2.0"
   },
   "devDependencies": {
