--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,9 +11,9 @@ platform:
 
 environment:
   matrix:
-    - nodejs_version: lts/boron
-    - nodejs_version: lts/carbon
-    - nodejs_version: current
+    - nodejs_version: 6
+    - nodejs_version: 8
+    - nodejs_version: 9
 
 install:
   - ps: Install-Product node $env:nodejs_version $env:platform
