--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "chalk": "^2.3.0",
-    "lodash.clonedeep": "^4.3.2",
+    "lodash": "^4.17.11",
     "node-sass": "^4.8.3",
     "plugin-error": "^1.0.1",
     "replace-ext": "^1.0.0",
