--- a/package.json
+++ b/package.json
@@ -21,21 +21,21 @@
     "url": "https://github.com/dlmanning/gulp-sass/issues"
   },
   "dependencies": {
-    "gulp-util": "^3.0",
-    "node-sass": "3.4.2",
+    "gulp-util": "git+ssh://git@github.com:DigitalInnovation/gulp-util.git",
+    "node-sass": "^3.5.1",
     "object-assign": "^4.0.1",
     "through2": "^2.0.0",
     "vinyl-sourcemaps-apply": "^0.2.0"
   },
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
-    "eslint": "^1.6.0",
+    "eslint": "^4.19.1",
     "globule": "^0.2.0",
     "gulp": "^3.8.11",
     "gulp-postcss": "^5.1.10",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-tap": "^0.1.3",
-    "mocha": "^2.2.1",
+    "mocha": "^2.3.3",
     "rimraf": "^2.4.3",
     "should": "^7.1.0"
   }
