--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-sudo: false
-
 language: node_js
 
+# https://github.com/nodejs/release
 node_js:
-  - lts/boron
-  - lts/carbon
-  - current
+  - 10
+  - 12
+  - 14
+  - node
