--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "plugin-error": "^1.0.1",
     "replace-ext": "^1.0.0",
     "strip-ansi": "^4.0.0",
+    "transfob": "^1.0.0",
     "vinyl-sourcemaps-apply": "^0.2.0"
   },
   "devDependencies": {
