--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "gulp-sass",
-  "version": "4.1.1",
+  "version": "5.0.0",
   "description": "Gulp plugin for sass",
   "main": "index.js",
   "engines": {
-    "node": ">=6"
+    "node": ">=12"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha test"
+    "test": "mocha test"
   },
   "repository": {
     "type": "git",
@@ -24,28 +24,29 @@
     "url": "https://github.com/dlmanning/gulp-sass/issues"
   },
   "dependencies": {
-    "chalk": "^2.3.0",
+    "chalk": "^4.1.1",
     "lodash": "^4.17.20",
-    "node-sass": "^4.8.3",
     "plugin-error": "^1.0.1",
-    "replace-ext": "^1.0.0",
-    "strip-ansi": "^4.0.0",
-    "through2": "^2.0.0",
-    "vinyl-sourcemaps-apply": "^0.2.0"
+    "replace-ext": "^2.0.0",
+    "strip-ansi": "^6.0.0",
+    "transfob": "^1.0.0",
+    "vinyl-sourcemaps-apply": "^0.2.1"
   },
   "devDependencies": {
-    "autoprefixer": "^8.1.0",
-    "eslint": "^4.18.2",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "globule": "^1.0.0",
-    "gulp": "^3.8.11",
-    "gulp-postcss": "^7.0.1",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-tap": "^0.1.3",
-    "mocha": "^5.0.4",
-    "rimraf": "^2.4.3",
-    "should": "^13.2.1",
-    "vinyl": "^2.1.0"
+    "autoprefixer": "^10.2.6",
+    "eslint": "^7.28.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "globule": "^1.3.2",
+    "gulp": "^4.0.2",
+    "gulp-postcss": "^9.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-tap": "^2.0.0",
+    "mocha": "^9.0.0",
+    "node-sass": "^6.0.0",
+    "postcss": "^8.3.4",
+    "rimraf": "^3.0.2",
+    "should": "^13.2.3",
+    "vinyl": "^2.2.1"
   }
 }
