--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "bugs": {
     "url": "https://github.com/dlmanning/gulp-sass/issues"
   },
+  "files": [
+    "index.js"
+  ],
   "dependencies": {
     "chalk": "^4.1.1",
     "lodash": "^4.17.20",
