Minor tweaks and cleanup
* enable strict mode (these aren't modules)
* use a template literal for the missing compiler message
* move variables where we use them
* disable a few ESLint rules
* move ESLint overrides around

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,9 +4,17 @@ env:
   mocha: true
   node: true
 
+extends: "airbnb-base"
+
+parserOptions:
+  sourceType: "script"
+
 rules:
   max-len:
     - 2
     - 120
-
-extends: "airbnb-base"
+  no-multi-assign: "off"
+  no-param-reassign: "off"
+  strict:
+    - "error"
+    - "safe"
