--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "index.js"
   ],
   "dependencies": {
-    "chalk": "^4.1.2",
     "lodash.clonedeep": "^4.5.0",
+    "picocolors": "^1.0.0",
     "plugin-error": "^1.0.1",
     "replace-ext": "^2.0.0",
     "strip-ansi": "^6.0.1",
