--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,6 @@ on:
 
 env:
   FORCE_COLOR: 2
-  NODE_LINT: 16 # The Node.js version to run lint
 
 jobs:
   lint:
@@ -22,7 +21,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ env.NODE_LINT }}
+          node-version: "lts/*"
           cache: npm
 
       - name: Install npm dependencies
