Add sass tests too

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint --report-unused-disable-directives --ignore-path .gitignore .",
     "fix": "npm run lint -- --fix",
     "mocha": "mocha",
-    "test": "mocha"
+    "test": "npm run test:node-sass && npm run test:dart-sass",
+    "test:node-sass": "mocha",
+    "test:dart-sass": "cross-env SASS_COMPILER=sass mocha"
   },
   "repository": {
     "type": "git",
@@ -40,6 +42,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.5.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
@@ -52,6 +55,7 @@
     "node-sass": "^7.0.1",
     "postcss": "^8.4.5",
     "rimraf": "^3.0.2",
+    "sass": "^1.45.1",
     "vinyl": "^2.2.1"
   }
 }
