Migrate to use the new Sass JS API by default
Keep the legacy API around, since its removal is still probably a
while from now.

Fixes #837

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "homepage": "https://github.com/dlmanning/gulp-sass#readme",
   "files": [
-    "index.js"
+    "index.js",
+    "legacy.js"
   ],
   "dependencies": {
     "lodash.clonedeep": "^4.5.0",
